--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 		<header>
 			<div class="wrap">
 				<img src="img/header.png" class="header">
-				<img src="img/car.png" class="car">
 			</div>
 		</header>
 		
@@ -28,15 +27,9 @@
 				</div>
 				<div class="half right">
 					<div class="calculator box-bg">
-						<input type="hidden" class="rate_compare" value="1.74">
-						<p><label>Auto Loan Balance</label>
-							<input type="text" class="amount" placeholder="7,500"></p>
-						<p><label>Auto Loan Term (Months)</label>
-							<input type="text" class="term" placeholder="36m, 60m"></p>
-						<p><label>Your Current Rate</label>
-							<input type="text" class="rate" placeholder="7%"></p>
-						<p>Fill out all fields above about your current auto loan to see what you can save.</p>
-						<p class="text-center"><input type="image" src="img/button-calculate.png" class="accrue-calculate"></p>
+						<p>How much would you like to borrow?</p>
+						<p><input type="text" class="amount" placeholder="25,000"></p>
+						<p class="text-center"><input type="image" src="img/button-calculate.png" class="calculate"></p>
 					</div>
 				</div>
 
@@ -46,8 +39,8 @@
 		<div class="results">
 			<div class="wrap">
 
-				<h2>Congratulations!</h2>
-				<h3>You could save up to $<span class="result-amount"></span> in interest!</h3>
+				<h3>Your payment for the first six months may be: $<span class="payment-six"></span></h3>
+				<h5>After that, it could be: $<span class="payment-remaining"></span></h5>
 				<div class="text-center">
 					<p><a href="https://www.cuopen24.com/sfimages/ppg_loanapp.shtm"><img src="img/button-apply.png" class="button-apply"></a></p>
 					<p><a class="button go-back">&laquo; go back</a></p>
@@ -56,24 +49,23 @@
 			</div>
 		</div>
 
-		<div class="footer-bar group">
+		<footer>
 			<div class="wrap">
 
 				<div class="half separator">
 					<a href="http://www.ppgfcu.org/"><img src="img/logo.png"></a>
 				</div>
 				<div class="half phone-number">
-					<img src="img/phone-number.png">
+					<h2>(724) 224-1777</h2>
 				</div>
 
 				<div class="fine-print group">
-					*APR = Annual Percentage Rate. The APR is the advertised rate and can vary based on creditworthiness, age of vehicle and terms of the loan. Offer subject to credit approval. Loans must be in good standing (not more than 30 days past due) to be eligible for this offer. The credit union rate zapper program is meant to save members money. However, the rate offered to each member will not go below the members qualified rate. Verification of current rate is required. Minimum floor rate for this offer is 1.99%. Minimum loan balance for the $100 offer is $10,000. Loans currently financed with the credit union are not eligible for this offer. Rate subject to change at any time without notice. For complete details, contact the credit union. This calculator shows the best case scenario. Individual savings may vary. Offer ends May 15th, 2016. <strong>Federally insured by the NCUA.</strong>
+					<img src="img/equal-housing.png" class="equal">
+					*APR=Annual Percentage Rate. Rate discount is based on a six month fixed term with $10,000 in new funds, at 80% loan-to-value. The introductory rate of 1.99% will be locked in for six months from closing date. After six months, the APR will be indexed to the Prime Rate which is currently 3.50% APR. The index used to determine the APR will be the Prime Rate found in the Money Rates Section of the Wall Street Journal. The APR will then be adjusted on the first of the following month. Minimum credit limit is $10,000. Rates effective as of April 1, 2016. Other rates and terms are available. All rates are subject to change without notice. All loan approvals are subject to normal underwriting procedures. Loan must be secured by primary residence, which must be owner-occupied. <strong>Federally insured by the NCUA.</strong>
 				</div>
 
 			</div>
-
-			<img src="img/phone.png" class="phone">
-		</div>
+		</footer>
 
 	</main>
 
