--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" class="no-js">
 <head>
 	<meta charset="utf-8">
-	<title>Auto Loan Rate Zapper - PPG</title>
+	<title>Shocking Home Equity - PPG</title>
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
