Add correct analytics code.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<h3>Your payment for the first six months may be: $<span class="payment-six"></span></h3>
 				<h5>After that, it could be: $<span class="payment-remaining"></span></h5>
 				<div class="text-center">
-					<p><a href="https://www.cuopen24.com/sfimages/ppg_loanapp.shtm"><img src="img/button-apply.png" class="button-apply"></a></p>
+					<p><a href="https://www.cuopen24.com/sfimages/ppg_loanapp.shtm" onclick="ga('send', 'event', 'Apply', 'click', 'Application');"><img src="img/button-apply.png" class="button-apply"></a></p>
 					<p><a class="button go-back">&laquo; go back</a></p>
 				</div>
 
