Adjust homepage content to match design.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		
 		<div class="wrap">
 			<div class="tool group">
-				<h1>Just tell us a little about your current auto loan and see how much you can save. Go on. Put us to the test.</h1>
+				<h1>Just tell us how much you'd like to borrow and we'll tell you your payment amount.</h1>
 					
 				<div class="half right first">
 					<img src="img/content.png">
